--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,6 +8,7 @@ on:
 jobs:
     unit-test:
         container: cuaesd/aesd-autotest:24-unit-test
+        runs-on: ubuntu-latest
         steps:
           - uses: actions/checkout@v2
           - name: Checkout submodules
@@ -16,7 +17,7 @@ jobs:
             run: ./unit-test.sh
     full-test:
         container: cuaesd/aesd-autotest:24-assignment1
-        runs-on: self-hosted
+        runs-on: ubuntu-latest
         steps:
           - uses: actions/checkout@v2
           - name: Checkout submodules
