--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,7 +17,7 @@ jobs:
             run: ./unit-test.sh
 
     full-test:
-        container: cuaesd/aesd-autotest:24-assignment3-part-2
+        container: cuaesd/aesd-autotest:24-assignment3
         runs-on: ubuntu-latest
         steps:
           - uses: actions/checkout@v2
